force-app/main/default/objects/Bucket_Account_Settings__c/Bucket_Account_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Use this custom setting to configure the settings for the programmatic logic which assigns B2C contacts to bucket accounts. IMPORTANT: Do not create exceptions to the default org levels. Only configure the default org levels</description>
    <label>B2C Bucket Account Settings</label>
</CustomObject>