force-app/main/default/objects/Bucket_Account_Settings__c/fields/Bucket_Account_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Bucket_Account_Owner_ID__c</fullName>
    <description>Specify the User ID of the User who will own bucket accounts. This user must be active. Note, changing this will not retroactively change the owner of bucket accounts already in the system.</description>
    <inlineHelpText>Specify the User ID of the User who will own bucket accounts. This user must be active. Note, changing this will not retroactively change the owner of bucket accounts already in the system.</inlineHelpText>
    <label>Bucket Account Owner ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>