force-app/main/default/objects/Bucket_Account_Settings__c/fields/Bucket_Account_RecordTypeID__c.field-meta.xml
<CustomField>
    <fullName>Bucket_Account_RecordTypeID__c</fullName>
    <description>Specify the record type of bucket accounts. Note, changing this will not retroactively change the record type of bucket accounts already in the system.</description>
    <inlineHelpText>Specify the record type of bucket accounts. Note, changing this will not retroactively change the record type of bucket accounts already in the system.</inlineHelpText>
    <label>Bucket Account RecordTypeID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>