force-app/main/default/objects/Bucket_Account_Settings__c/fields/Default_Bucket_Name__c.field-meta.xml
<CustomField>
    <fullName>Default_Bucket_Name__c</fullName>
    <description>Define the default account name for bucket accounts. Note, changing this will not retroactively change the name of bucket accounts already in the system.</description>
    <inlineHelpText>Define the default account name for bucket accounts. Note, changing this will not retroactively change the name of bucket accounts already in the system.</inlineHelpText>
    <label>Default Bucket Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>