force-app/main/default/objects/Bucket_Account_Settings__c/fields/Maximum_Size_of_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Size_of_Bucket__c</fullName>
    <description>Define how many contacts a bucket account may contain before it is considered closed and may not accept any more contacts. Note if you change this value, then you must request that all B2C contacts are reassigned to buckets. This can be done by setting their AccountID to null. Triggers will catch on this criteria and reassign them to buckets based on the new threshold.</description>
    <label>Maximum Size of Bucket</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>